fix layout space in responsive and fix titles alignment

--- a/css/banner.css
+++ b/css/banner.css
@@ -36,6 +36,6 @@
 
 @media (max-width: 780px) {
   #banner {
-    margin-top: 100px;
+    margin-top: 75px;
   }
 }
