--- a/css/contact.css
+++ b/css/contact.css
@@ -38,4 +38,9 @@
     display: flex;
     flex-direction: column;
   }
+
+  .contact-content p {
+    display: flex;
+    justify-content: start;
+  }
 }
