--- a/css/header.css
+++ b/css/header.css
@@ -65,12 +65,17 @@
 }
 
 @media (max-width: 780px) {
-  header {
+  #header {
     display: flex;
     flex-direction: column;
+    margin-top: 75px;
 
     & .profile-icon {
       display: none;
+    }
+
+    & .introduction {
+      margin-top: -38px;
     }
   }
 }
